syntax = "proto3";

package crawler;

import "google/protobuf/empty.proto";

enum BookStatus {
    UNCACHED = 0;
    CACHED = 1;
    UPDATING = 2;
    UNAVAILABLE = 3;
}

message Book {
  int32 code = 1;
  int32 id = 2;
  string title = 3;
  BookStatus status = 4;
  string oriId = 5;
  string oriSource = 6;
}

message BookStatusReply {
  BookStatus status = 1;
}

message GetBookReply {
  repeated Book books = 1;
}

message RequestCacheBookReply {
  int32 code = 1;
  string message = 2;
}

message BookContentReply {
  int32 code = 1;
  string content = 2;
}

message CrawlerVer {
  int32 version = 1;
}


service Books {
    rpc GetBook(Book) returns (GetBookReply) {};
    rpc GetBookStatus(Book) returns (BookStatusReply) {};
    rpc RequestCacheBook(Book) returns (RequestCacheBookReply) {};
    rpc GetBookContent(Book) returns (stream BookContentReply) {};
}

service GetCrawlerVer {
  rpc GetCrawlerVer(google.protobuf.Empty) returns (CrawlerVer) {};
}
